SERVER-103841: transaction coordinator lifetime (#35591)

GitOrigin-RevId: dd34f52ddbb0df6d213462c96573f1094345da87