src/mongo/db/s/transaction_coordinator.h
@@ -99,8 +99,7 @@ public:
                            const LogicalSessionId& lsid,
                            const TxnNumberAndRetryCounter& txnNumberAndRetryCounter,
                            std::unique_ptr<txn::AsyncWorkScheduler> scheduler,
-                           Date_t deadline,
-                           const CancellationToken& cancelToken);
+                           Date_t deadline);
 
     ~TransactionCoordinator();
 
@@ -159,6 +158,13 @@ public:
      * when the transaction coordinator service is shutting down.
      */
     void cancelIfCommitNotYetStarted();
+
+    /**
+     * Cancels the owned cancellation token which interrupts/cancels all associated
+     * `WaitForMajority` invocations under this coordinator. typically invoked only by the
+     * TransactionCoordinatorService during stepdown.
+     */
+    void cancel();
 
     TxnRetryCounter getTxnRetryCounterForTest() const {
         return *_txnNumberAndRetryCounter.getTxnRetryCounter();
@@ -253,8 +259,8 @@ private:
     // The deadline for the TransactionCoordinator to reach a decision
     Date_t _deadline;
 
-    // The cancellation token for WaitForMajority.
-    const CancellationToken _cancelToken;
+    // The cancellation source for WaitForMajority.
+    CancellationSource _cancellationSource;
 };
 
 }  // namespace mongo
