src/mongo/db/s/transaction_coordinator_test.cpp
@@ -260,8 +260,6 @@ protected:
 
     LogicalSessionId _lsid{makeLogicalSessionIdForTest()};
     TxnNumberAndRetryCounter _txnNumberAndRetryCounter{1, 1};
-    CancellationSource cancelSource;
-    CancellationToken _cancelToken{cancelSource.token()};
 };
 
 class TransactionCoordinatorDriverTest : public TransactionCoordinatorTestBase {
@@ -1244,8 +1242,7 @@ TEST_F(TransactionCoordinatorTest, RunCommitProducesCommitDecisionOnTwoCommitRes
         _lsid,
         _txnNumberAndRetryCounter,
         std::make_unique<txn::AsyncWorkScheduler>(getServiceContext()),
-        Date_t::max(),
-        _cancelToken);
+        Date_t::max());
     coordinator->start(operationContext());
     coordinator->runCommit(operationContext(), kTwoShardIdList);
     auto commitDecisionFuture = coordinator->getDecision();
@@ -1271,8 +1268,7 @@ TEST_F(TransactionCoordinatorTest, RunCommitProducesAbortDecisionOnAbortAndCommi
         _lsid,
         _txnNumberAndRetryCounter,
         std::make_unique<txn::AsyncWorkScheduler>(getServiceContext()),
-        Date_t::max(),
-        _cancelToken);
+        Date_t::max());
     coordinator->start(operationContext());
     coordinator->runCommit(operationContext(), kTwoShardIdList);
     auto commitDecisionFuture = coordinator->getDecision();
@@ -1300,8 +1296,7 @@ TEST_F(TransactionCoordinatorTest,
         _lsid,
         _txnNumberAndRetryCounter,
         std::make_unique<txn::AsyncWorkScheduler>(getServiceContext()),
-        Date_t::max(),
-        _cancelToken);
+        Date_t::max());
     coordinator->start(operationContext());
     coordinator->runCommit(operationContext(), kTwoShardIdList);
     auto commitDecisionFuture = coordinator->getDecision();
@@ -1329,8 +1324,7 @@ TEST_F(TransactionCoordinatorTest,
         _lsid,
         _txnNumberAndRetryCounter,
         std::make_unique<txn::AsyncWorkScheduler>(getServiceContext()),
-        Date_t::max(),
-        _cancelToken);
+        Date_t::max());
     coordinator->start(operationContext());
     coordinator->runCommit(operationContext(), kTwoShardIdList);
     auto commitDecisionFuture = coordinator->getDecision();
@@ -1357,8 +1351,7 @@ TEST_F(TransactionCoordinatorTest, RunCommitProducesAbortDecisionOnSingleAbortRe
         _lsid,
         _txnNumberAndRetryCounter,
         std::make_unique<txn::AsyncWorkScheduler>(getServiceContext()),
-        Date_t::max(),
-        _cancelToken);
+        Date_t::max());
     coordinator->start(operationContext());
     coordinator->runCommit(operationContext(), kTwoShardIdList);
     auto commitDecisionFuture = coordinator->getDecision();
@@ -1384,8 +1377,7 @@ TEST_F(TransactionCoordinatorTest,
         _lsid,
         _txnNumberAndRetryCounter,
         std::make_unique<txn::AsyncWorkScheduler>(getServiceContext()),
-        Date_t::max(),
-        _cancelToken);
+        Date_t::max());
     coordinator->start(operationContext());
     coordinator->runCommit(operationContext(), kTwoShardIdList);
     auto commitDecisionFuture = coordinator->getDecision();
@@ -1418,8 +1410,7 @@ TEST_F(TransactionCoordinatorTest,
         _lsid,
         _txnNumberAndRetryCounter,
         std::make_unique<txn::AsyncWorkScheduler>(getServiceContext()),
-        Date_t::max(),
-        _cancelToken);
+        Date_t::max());
     coordinator->start(operationContext());
     coordinator->runCommit(operationContext(), kTwoShardIdList);
     auto commitDecisionFuture = coordinator->getDecision();
@@ -1449,8 +1440,7 @@ TEST_F(TransactionCoordinatorTest,
         _lsid,
         _txnNumberAndRetryCounter,
         std::make_unique<txn::AsyncWorkScheduler>(getServiceContext()),
-        Date_t::max(),
-        _cancelToken);
+        Date_t::max());
     coordinator->start(operationContext());
     coordinator->runCommit(operationContext(), kTwoShardIdList);
     auto commitDecisionFuture = coordinator->getDecision();
@@ -1485,8 +1475,7 @@ TEST_F(TransactionCoordinatorTest,
         _lsid,
         _txnNumberAndRetryCounter,
         std::make_unique<txn::AsyncWorkScheduler>(getServiceContext()),
-        Date_t::max(),
-        _cancelToken);
+        Date_t::max());
     coordinator->start(operationContext());
     coordinator->runCommit(operationContext(), kTwoShardIdList);
     auto commitDecisionFuture = coordinator->getDecision();
@@ -1518,8 +1507,7 @@ TEST_F(TransactionCoordinatorTest, RunCommitProducesEndOfTransactionOplogEntry) 
         _lsid,
         _txnNumberAndRetryCounter,
         std::make_unique<txn::AsyncWorkScheduler>(getServiceContext()),
-        Date_t::max(),
-        _cancelToken);
+        Date_t::max());
     coordinator->start(operationContext());
     coordinator->runCommit(operationContext(), kOneShardIdList);
     assertPrepareSentAndRespondWithSuccess();
@@ -1704,8 +1692,7 @@ protected:
             _lsid,
             _txnNumberAndRetryCounter,
             std::make_unique<txn::AsyncWorkScheduler>(getServiceContext()),
-            Date_t::max(),
-            _cancelToken);
+            Date_t::max());
         coordinator->start(operationContext());
 
         coordinator->runCommit(operationContext(), kTwoShardIdList);
@@ -1886,8 +1873,7 @@ TEST_F(TransactionCoordinatorMetricsTest, SimpleTwoPhaseCommitRealCoordinator) {
         _lsid,
         _txnNumberAndRetryCounter,
         std::make_unique<txn::AsyncWorkScheduler>(getServiceContext()),
-        Date_t::max(),
-        _cancelToken);
+        Date_t::max());
     coordinator->start(operationContext());
     const auto& stats =
         coordinator->getMetricsObserverForTest().getSingleTransactionCoordinatorStats();
@@ -2063,8 +2049,7 @@ TEST_F(TransactionCoordinatorMetricsTest, CoordinatorIsCanceledWhileInactive) {
         _lsid,
         _txnNumberAndRetryCounter,
         std::make_unique<txn::AsyncWorkScheduler>(getServiceContext()),
-        Date_t::max(),
-        _cancelToken);
+        Date_t::max());
     coordinator->start(operationContext());
     const auto& stats =
         coordinator->getMetricsObserverForTest().getSingleTransactionCoordinatorStats();
@@ -2110,12 +2095,8 @@ TEST_F(TransactionCoordinatorMetricsTest, CoordinatorsAWSIsShutDownWhileCoordina
 
     auto aws = std::make_unique<txn::AsyncWorkScheduler>(getServiceContext());
     auto awsPtr = aws.get();
-    auto coordinator = std::make_shared<TransactionCoordinator>(operationContext(),
-                                                                _lsid,
-                                                                _txnNumberAndRetryCounter,
-                                                                std::move(aws),
-                                                                Date_t::max(),
-                                                                _cancelToken);
+    auto coordinator = std::make_shared<TransactionCoordinator>(
+        operationContext(), _lsid, _txnNumberAndRetryCounter, std::move(aws), Date_t::max());
     coordinator->start(operationContext());
     const auto& stats =
         coordinator->getMetricsObserverForTest().getSingleTransactionCoordinatorStats();
@@ -2162,12 +2143,8 @@ TEST_F(TransactionCoordinatorMetricsTest,
     expectedMetrics.totalCreated++;
 
     auto aws = std::make_unique<txn::AsyncWorkScheduler>(getServiceContext());
-    auto coordinator = std::make_shared<TransactionCoordinator>(operationContext(),
-                                                                _lsid,
-                                                                _txnNumberAndRetryCounter,
-                                                                std::move(aws),
-                                                                Date_t::max(),
-                                                                _cancelToken);
+    auto coordinator = std::make_shared<TransactionCoordinator>(
+        operationContext(), _lsid, _txnNumberAndRetryCounter, std::move(aws), Date_t::max());
     coordinator->start(operationContext());
     const auto& stats =
         coordinator->getMetricsObserverForTest().getSingleTransactionCoordinatorStats();
@@ -2234,12 +2211,8 @@ TEST_F(TransactionCoordinatorMetricsTest,
 
     auto aws = std::make_unique<txn::AsyncWorkScheduler>(getServiceContext());
     auto awsPtr = aws.get();
-    auto coordinator = std::make_shared<TransactionCoordinator>(operationContext(),
-                                                                _lsid,
-                                                                _txnNumberAndRetryCounter,
-                                                                std::move(aws),
-                                                                Date_t::max(),
-                                                                _cancelToken);
+    auto coordinator = std::make_shared<TransactionCoordinator>(
+        operationContext(), _lsid, _txnNumberAndRetryCounter, std::move(aws), Date_t::max());
     coordinator->start(operationContext());
     const auto& stats =
         coordinator->getMetricsObserverForTest().getSingleTransactionCoordinatorStats();
@@ -2305,12 +2278,8 @@ TEST_F(TransactionCoordinatorMetricsTest,
     expectedMetrics.totalCreated++;
 
     auto aws = std::make_unique<txn::AsyncWorkScheduler>(getServiceContext());
-    auto coordinator = std::make_shared<TransactionCoordinator>(operationContext(),
-                                                                _lsid,
-                                                                _txnNumberAndRetryCounter,
-                                                                std::move(aws),
-                                                                Date_t::max(),
-                                                                _cancelToken);
+    auto coordinator = std::make_shared<TransactionCoordinator>(
+        operationContext(), _lsid, _txnNumberAndRetryCounter, std::move(aws), Date_t::max());
     coordinator->start(operationContext());
     const auto& stats =
         coordinator->getMetricsObserverForTest().getSingleTransactionCoordinatorStats();
@@ -2384,12 +2353,8 @@ TEST_F(TransactionCoordinatorMetricsTest,
 
     auto aws = std::make_unique<txn::AsyncWorkScheduler>(getServiceContext());
     auto awsPtr = aws.get();
-    auto coordinator = std::make_shared<TransactionCoordinator>(operationContext(),
-                                                                _lsid,
-                                                                _txnNumberAndRetryCounter,
-                                                                std::move(aws),
-                                                                Date_t::max(),
-                                                                _cancelToken);
+    auto coordinator = std::make_shared<TransactionCoordinator>(
+        operationContext(), _lsid, _txnNumberAndRetryCounter, std::move(aws), Date_t::max());
     coordinator->start(operationContext());
     const auto& stats =
         coordinator->getMetricsObserverForTest().getSingleTransactionCoordinatorStats();
@@ -2462,12 +2427,8 @@ TEST_F(TransactionCoordinatorMetricsTest, CoordinatorsAWSIsShutDownWhileCoordina
 
     auto aws = std::make_unique<txn::AsyncWorkScheduler>(getServiceContext());
     auto awsPtr = aws.get();
-    auto coordinator = std::make_shared<TransactionCoordinator>(operationContext(),
-                                                                _lsid,
-                                                                _txnNumberAndRetryCounter,
-                                                                std::move(aws),
-                                                                Date_t::max(),
-                                                                _cancelToken);
+    auto coordinator = std::make_shared<TransactionCoordinator>(
+        operationContext(), _lsid, _txnNumberAndRetryCounter, std::move(aws), Date_t::max());
     coordinator->start(operationContext());
     const auto& stats =
         coordinator->getMetricsObserverForTest().getSingleTransactionCoordinatorStats();
@@ -2547,8 +2508,7 @@ TEST_F(TransactionCoordinatorMetricsTest,
         _lsid,
         _txnNumberAndRetryCounter,
         std::make_unique<txn::AsyncWorkScheduler>(getServiceContext()),
-        Date_t::now() + Seconds(1),
-        _cancelToken);
+        Date_t::now() + Seconds(1));
     coordinator->start(operationContext());
 
     // Wait until the coordinator is writing the participant list.
@@ -2621,8 +2581,7 @@ TEST_F(TransactionCoordinatorMetricsTest, DoesNotLogTransactionsUnderSlowMSThres
         _lsid,
         _txnNumberAndRetryCounter,
         std::make_unique<txn::AsyncWorkScheduler>(getServiceContext()),
-        Date_t::max(),
-        _cancelToken);
+        Date_t::max());
     coordinator->start(operationContext());
 
     coordinator->runCommit(operationContext(), kTwoShardIdList);
@@ -2658,8 +2617,7 @@ TEST_F(
         _lsid,
         _txnNumberAndRetryCounter,
         std::make_unique<txn::AsyncWorkScheduler>(getServiceContext()),
-        Date_t::max(),
-        _cancelToken);
+        Date_t::max());
     coordinator->start(operationContext());
 
     tickSource()->advance(Milliseconds(101));
@@ -2693,8 +2651,7 @@ TEST_F(TransactionCoordinatorMetricsTest, LogsTransactionsOverSlowMSThreshold) {
         _lsid,
         _txnNumberAndRetryCounter,
         std::make_unique<txn::AsyncWorkScheduler>(getServiceContext()),
-        Date_t::max(),
-        _cancelToken);
+        Date_t::max());
     coordinator->start(operationContext());
 
     coordinator->runCommit(operationContext(), kTwoShardIdList);
@@ -2745,8 +2702,7 @@ TEST_F(TransactionCoordinatorMetricsTest, SlowLogLineIncludesTerminationCauseFor
         _lsid,
         _txnNumberAndRetryCounter,
         std::make_unique<txn::AsyncWorkScheduler>(getServiceContext()),
-        Date_t::max(),
-        _cancelToken);
+        Date_t::max());
     coordinator->start(operationContext());
 
     coordinator->runCommit(operationContext(), kTwoShardIdList);
@@ -2800,8 +2756,7 @@ TEST_F(TransactionCoordinatorMetricsTest, SlowLogLineIncludesStepDurationsAndTot
         _lsid,
         _txnNumberAndRetryCounter,
         std::make_unique<txn::AsyncWorkScheduler>(getServiceContext()),
-        Date_t::max(),
-        _cancelToken);
+        Date_t::max());
     coordinator->start(operationContext());
 
     {
@@ -2909,8 +2864,7 @@ TEST_F(TransactionCoordinatorMetricsTest, RecoveryFromFailureIndicatedInReportSt
         _lsid,
         _txnNumberAndRetryCounter,
         std::make_unique<txn::AsyncWorkScheduler>(getServiceContext()),
-        Date_t::max(),
-        _cancelToken);
+        Date_t::max());
     coordinator->start(operationContext());
 
     const auto assertRecoveryFlag = [opCtx = operationContext(),
@@ -2951,8 +2905,7 @@ TEST_F(TransactionCoordinatorMetricsTest, ClientInformationIncludedInReportState
         _lsid,
         _txnNumberAndRetryCounter,
         std::make_unique<txn::AsyncWorkScheduler>(getServiceContext()),
-        Date_t::max(),
-        _cancelToken);
+        Date_t::max());
     coordinator->start(operationContext());
 
     {
